Revert "Minh/AlmostDone"